# varro

./: .env  .gitignore  .sesskey  AGENTS.md  CLAUDE.md  LICENSE  README.md  add_map_notes_instruction.md  chat.py  chat_see_implementation_notes.md  debug_column_values.py  deployment_setup_notes.md  dst_api_readme.md  findings.md  investigation_chat_dashboard_cancellation.md  main.py  package-lock.json  package.json  plan-dim-db-niveau1.md  plan.md  plan_geojson_maps.md  playground_refactor.md  playground_reflections.md  pnpm-lock.yaml  pyproject.toml  statbank_sync_guide.md  test.py  test_agent_html_stream.py
agent/docs/: fasthtml_best_practices.md  mistletoe_examples.md  url_design.txt
agent/specs/: chat_spec.md  dashboard_spec.md
agents/: 01_project_map.md  02_app_ui_architecture.md  03_chat_agent_runtime.md  04_dashboard_framework.md  05_data_context_pipeline.md  06_known_gaps_and_mismatches.md  06_playground_exploration.md  07_deployment.md  index.md
agents/dev/: loop.md  test_plan.md
agents/frontpage/: frontpage_dashboards.md
agents/notes/: bwrap_phase0_preflight.md  bwrap_phase2_phase3_shell_sandbox.md  dashboard_filter_select_value_label.md  dev_bash_absolute_path_translation.md  dimension_tables_overview.md  model_cost_debiting.md  playground_q1_befolkning.md  playground_q2_husleje.md  playground_q4_afgroeder.md  playground_q5_oekonomi.md  playground_q9_regioner.md  stripe_payments_balance.md  subject_tables_dict.json
alembic/: env.py
alembic/versions/: 1a7651b84c67_renamed_message_to_turn.py  2f4d88a72f0d_add_model_charge_table.py  3a93fe8a91c0_add_user_tables.py  8e6f7f3900f0_add_balance_and_stripe_payments.py  (+3 more)
app/: AGENTS.md  CLAUDE.md  README.md  main.py  main_chat.py
app/routes/: auth.py  chat.py  (+4 more)
backend/: pyproject.toml
deploy/: Caddyfile  manage-workers.sh  setup.sh  varro@.service
docs/: Design thoughts.md  docs_template.md
evidence-template/: evidence.config.yaml  package-lock.json  package.json
frontend/: CLAUDE.md  package-lock.json  package.json
scripts/: add_join_overrides.py  audit_dim_joins.py  check_bwrap_phase0.sh  copy_tables_statbank.py  create_link_dimensions.py  create_subjects_graph.py  dim_tables_to_db.py  fact_tables_to_db.py  gen_dim_docs.py  get_cat_tables_and_descriptions.py  link_dimensions_prompt.j2  manage_users.py  sync_agents_md.sh  test_single_table_sync.py
styles/: typography.css
tests/: test_dashboard_queries.py
ui/: AGENTS.md  CLAUDE.md  __init__.py  core.py  daisy.py  theme.css
ui_chat/: app.py
varro/: config.py  db.py  utils.py
(+1030 files in other folders)
